# chickengame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.bat  setup.bat
assets/: grassy-river.tmx
configs/: mainConfig.json
include/: Animations.h  Chickengame.h  ConsoleListener.h  Controls.h  Entities.h  Game.h  KeyboardController.h  MusicAndSoundImplementation.h  Pickupables.h  StatImplementation.h  TextureDict.h  TextureEnumImplementation.h
src/: Animations.cpp  Chickengame.cpp  Controls.cpp  Entities.cpp  Game.cpp  KeyboardController.cpp  Pickupables.cpp  StatImplementation.cpp
